# ncgt-patterns

./: README.md  pyproject.toml
strategy_pattern/: config.toml  config.yaml  strategy_pattern.py
